yaml/deployment.yaml
---
# Source: db-controller/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-controller
  namespace: default
  labels:
    app: db-controller
    app.kubernetes.io/name: db-controller
    app.kubernetes.io/version: "0.1.0"
spec:
  podSelector:
    matchLabels:
      app: db-controller
  policyTypes:
  - Ingress
  - Egress
  egress:

  # Kubernetes apiserver access
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - port: 443
      protocol: TCP
    - port: 6443
      protocol: TCP
  # DNS egress
  - to:
    - podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: 53
      protocol: UDP

  ingress:
  # prometheus metrics scraping support
  - from:
    - namespaceSelector:
        matchLabels:
          name: monitoring
      podSelector:
        matchLabels:
          app: prometheus
    ports:
    - port: http
      protocol: TCP
---
# Source: db-controller/templates/service.yaml
# Expose the http port of the service
apiVersion: v1
kind: Service
metadata:
  name: db-controller
  namespace: default
  labels:
    app: db-controller
    app.kubernetes.io/name: db-controller
    app.kubernetes.io/version: "0.1.0"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: db-controller
---
# Source: db-controller/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-controller
  namespace: default
  labels:
    app: db-controller
    app.kubernetes.io/name: db-controller
    app.kubernetes.io/version: "0.1.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-controller
  template:
    metadata:
      labels:
        app: db-controller
      annotations:
        kubectl.kubernetes.io/default-container: db-controller
    spec:
      serviceAccountName: db-controller
      securityContext:
        {}
      containers:
      - name: db-controller
        image: sunsided/db-controller:0.1.0
        imagePullPolicy: IfNotPresent
        securityContext:
          {}
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 100Mi
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 5
          periodSeconds: 5
